# fotosintetic-server

./: CMakeLists.txt  README.md  db.sql
include/: dbschema.h
source/: main.cpp
